Revert unnecessary commits from main
Issue gh-15016